log/build_2022-11-11_17-39-23/ros2_robotx/stderr.log
  File "/home/adept/ros2_ws_2/install/ros2_robotx/lib/python3.8/site-packages/ros2_robotx/drone_control.py", line 79
    '/cmd_prep,
              ^
SyntaxError: EOL while scanning string literal

